[gd_scene load_steps=19 format=2]

[ext_resource path="res://models/gameboard/pillar/pillar_w_collision.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/themes/DynaPuffOutline2.tres" type="Theme" id=2]
[ext_resource path="res://ui_elements/themes/Teko-MediumOutline3.tres" type="Theme" id=3]
[ext_resource path="res://images/background/Title_Screen_With_FUYAN.png" type="Texture" id=4]
[ext_resource path="res://images/background/no_deck.png" type="Texture" id=5]
[ext_resource path="res://ui_elements/main_menu/main_menu.gd" type="Script" id=6]
[ext_resource path="res://ui_elements/hand/start_hand.gd" type="Script" id=7]
[ext_resource path="res://images/button/default_button.png" type="Texture" id=8]
[ext_resource path="res://ui_elements/deck_creator/deck_creator.gd" type="Script" id=9]
[ext_resource path="res://game/game_ui.gd" type="Script" id=10]
[ext_resource path="res://models/gameboard/pillar/pillar_w_collision_red.tscn" type="PackedScene" id=11]
[ext_resource path="res://models/gameboard/pillar/pillar_w_collision_blue.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui_elements/lobby/lobby.gd" type="Script" id=13]
[ext_resource path="res://images/background/cursed_fuyan.png" type="Texture" id=14]
[ext_resource path="res://images/sprites/Temporary_Crab_Hero.png" type="Texture" id=15]
[ext_resource path="res://game/game_board.gd" type="Script" id=17]
[ext_resource path="res://game/freecam.gd" type="Script" id=18]
[ext_resource path="res://images/sprites/Temporary_Palm_Hero_Enemy.png" type="Texture" id=20]

[node name="main" type="Spatial"]

[node name="DeckCreator" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="DeckMenu" type="TextureRect" parent="DeckCreator"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="MenuSelectDeck" type="Control" parent="DeckCreator"]

[node name="Buttons" type="Control" parent="DeckCreator/MenuSelectDeck"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 640.0
margin_top = 474.0
margin_right = 680.0
margin_bottom = 514.0
theme = ExtResource( 3 )

[node name="MainMenu" type="TextureButton" parent="DeckCreator/MenuSelectDeck/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -551.0
margin_top = 412.0
margin_right = -251.0
margin_bottom = 505.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DeckCreator/MenuSelectDeck/Buttons/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -43.5
margin_right = 105.0
margin_bottom = 43.5
text = "Main Menu"

[node name="PalmDeck" type="TextureButton" parent="DeckCreator/MenuSelectDeck/Buttons"]
margin_left = 140.0
margin_top = 308.0
margin_right = 440.0
margin_bottom = 401.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DeckCreator/MenuSelectDeck/Buttons/PalmDeck"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -43.5
margin_right = 102.0
margin_bottom = 43.5
text = "Palm Deck"

[node name="CrabDeck" type="TextureButton" parent="DeckCreator/MenuSelectDeck/Buttons"]
margin_left = -196.0
margin_top = 308.0
margin_right = 104.0
margin_bottom = 401.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DeckCreator/MenuSelectDeck/Buttons/CrabDeck"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -43.5
margin_right = 98.0
margin_bottom = 43.5
text = "Crab Deck"

[node name="ClearDeck" type="TextureButton" parent="DeckCreator/MenuSelectDeck/Buttons"]
margin_left = -196.0
margin_top = 429.0
margin_right = 104.0
margin_bottom = 522.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DeckCreator/MenuSelectDeck/Buttons/ClearDeck"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -43.5
margin_right = 104.0
margin_bottom = 43.5
text = "Clear Deck"

[node name="BaseDeck" type="TextureButton" parent="DeckCreator/MenuSelectDeck/Buttons"]
margin_left = -531.0
margin_top = 308.0
margin_right = -231.0
margin_bottom = 401.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DeckCreator/MenuSelectDeck/Buttons/BaseDeck"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.5
margin_top = -43.5
margin_right = 101.5
margin_bottom = 43.5
text = "Base Deck"

[node name="CardsInClan" type="Control" parent="DeckCreator"]
visible = false

[node name="BackToMenuButton" type="TextureButton" parent="DeckCreator/CardsInClan"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 109.0
margin_top = 909.0
margin_right = 409.0
margin_bottom = 1002.0
theme = ExtResource( 3 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DeckCreator/CardsInClan/BackToMenuButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.5
margin_top = -43.5
margin_right = 133.5
margin_bottom = 43.5
text = "Back To Menu"

[node name="Control" type="Control" parent="DeckCreator/CardsInClan"]
margin_left = 80.0
margin_top = 140.0
margin_right = 1430.0
margin_bottom = 790.0

[node name="ClanCardContainer" type="GridContainer" parent="DeckCreator/CardsInClan"]
margin_left = 80.0
margin_top = 140.0
margin_right = 80.0
margin_bottom = 140.0
theme = ExtResource( 2 )
custom_constants/vseparation = 50
custom_constants/hseparation = 20
columns = 8

[node name="DeckOnDisplay" type="Control" parent="DeckCreator"]

[node name="CardCounterLabel" type="Label" parent="DeckCreator/DeckOnDisplay"]
margin_left = 1628.0
margin_top = 819.0
margin_right = 1828.0
margin_bottom = 906.0
theme = ExtResource( 3 )
text = "0/40"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="DeckCreator/DeckOnDisplay"]
margin_left = 1613.0
margin_top = 113.0
margin_right = 1813.0
margin_bottom = 813.0
scroll_horizontal_enabled = false

[node name="DeckOnDisplayContainer" type="VBoxContainer" parent="DeckCreator/DeckOnDisplay/ScrollContainer"]
theme = ExtResource( 2 )

[node name="MainMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="Buttons" type="Control" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -106.0
margin_right = 20.0
margin_bottom = -66.0
theme = ExtResource( 3 )

[node name="CreateDeckButton" type="TextureButton" parent="MainMenu/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -911.0
margin_top = -72.0
margin_right = -611.0
margin_bottom = 21.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MainMenu/Buttons/CreateDeckButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.5
margin_top = -43.5
margin_right = 117.5
margin_bottom = 43.5
text = "Create Deck"
align = 1

[node name="PlayGameButton" type="TextureButton" parent="MainMenu/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -911.0
margin_top = -182.0
margin_right = -611.0
margin_bottom = -89.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MainMenu/Buttons/PlayGameButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -43.5
margin_right = 108.0
margin_bottom = 43.5
text = "Online Play"
align = 1

[node name="Settings" type="TextureButton" parent="MainMenu/Buttons"]
margin_left = -891.0
margin_top = 58.0
margin_right = -591.0
margin_bottom = 151.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MainMenu/Buttons/Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -43.5
margin_right = 80.0
margin_bottom = 43.5
text = "Settings"

[node name="QuitGameButton" type="TextureButton" parent="MainMenu/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -911.0
margin_top = 168.0
margin_right = -611.0
margin_bottom = 261.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="MainMenu/Buttons/QuitGameButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -43.5
margin_right = 98.0
margin_bottom = 43.5
text = "Quit Game"
align = 1

[node name="Lobby" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )

[node name="ColorRect" type="TextureButton" parent="Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 14 )

[node name="StartHand" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -150.0
margin_right = 320.0
margin_bottom = 150.0
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="StartHand"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="ReadyButton" type="TextureButton" parent="StartHand"]
margin_left = 906.0
margin_top = 537.0
margin_right = 1206.0
margin_bottom = 630.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="StartHand/ReadyButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -43.5
margin_right = 60.5
margin_bottom = 43.5
theme = ExtResource( 3 )
text = "Ready"

[node name="GameUI" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -750.0
margin_top = -390.0
margin_right = 750.0
margin_bottom = -90.0
script = ExtResource( 10 )

[node name="Hero" type="Control" parent="GameUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -690.0
margin_right = -1710.0
margin_bottom = -990.0

[node name="HeroRect" type="TextureRect" parent="GameUI/Hero"]
margin_left = 1642.0
margin_top = 842.0
margin_right = 1842.0
margin_bottom = 1042.0
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="GameUI/Hero/HeroRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -43.5
margin_right = 53.0
margin_bottom = 43.5
theme = ExtResource( 3 )
text = "1/1"
align = 1

[node name="EnemyHeroRect" type="TextureRect" parent="GameUI/Hero"]
margin_left = 49.0
margin_top = 40.0
margin_right = 249.0
margin_bottom = 240.0
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="GameUI/Hero/EnemyHeroRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -43.5
margin_right = 53.0
margin_bottom = 43.5
theme = ExtResource( 3 )
text = "1/1"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -132.0
margin_right = -132.0
alignment = 1

[node name="PassTurnButton" type="TextureButton" parent="GameUI"]
margin_left = 1376.0
margin_top = -116.0
margin_right = 1676.0
margin_bottom = -23.0
theme = ExtResource( 3 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GameUI/PassTurnButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -43.5
margin_right = 94.0
margin_bottom = 133.5
text = "Pass Turn
"
align = 1

[node name="EnemyContainer" type="HBoxContainer" parent="GameUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -800.0
margin_right = 1125.0
margin_bottom = -500.0
rect_scale = Vector2( 0.5, 0.5 )
alignment = 1

[node name="GameBoard" type="Spatial" parent="."]
script = ExtResource( 17 )

[node name="Camera" type="Camera" parent="GameBoard"]
transform = Transform( 1, 0, 4.37114e-08, -4.37114e-08, 1.91069e-15, 1, 0, -1, 1.91069e-15, 7.3, 22, 6 )
script = ExtResource( 18 )

[node name="Pillars" type="Spatial" parent="GameBoard"]

[node name="1" type="Spatial" parent="GameBoard/Pillars"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0231047 )

[node name="1" parent="GameBoard/Pillars/1" instance=ExtResource( 12 )]

[node name="2" parent="GameBoard/Pillars/1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.84255, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="3" parent="GameBoard/Pillars/1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.68364, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="4" parent="GameBoard/Pillars/1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.52579, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="5" parent="GameBoard/Pillars/1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.36688, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="6" parent="GameBoard/Pillars/1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.20944, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="7" parent="GameBoard/Pillars/1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0505, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="8" parent="GameBoard/Pillars/1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8927, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="9" parent="GameBoard/Pillars/1" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7338, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="2" type="Spatial" parent="GameBoard/Pillars"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.85019 )

[node name="1" parent="GameBoard/Pillars/2" instance=ExtResource( 12 )]

[node name="2" parent="GameBoard/Pillars/2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.84255, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="3" parent="GameBoard/Pillars/2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.68364, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="4" parent="GameBoard/Pillars/2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.52579, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="5" parent="GameBoard/Pillars/2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.36688, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="6" parent="GameBoard/Pillars/2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.20944, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="7" parent="GameBoard/Pillars/2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0505, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="8" parent="GameBoard/Pillars/2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8927, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="9" parent="GameBoard/Pillars/2" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7338, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="3" type="Spatial" parent="GameBoard/Pillars"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.69303 )

[node name="1" parent="GameBoard/Pillars/3" instance=ExtResource( 12 )]

[node name="2" parent="GameBoard/Pillars/3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.84255, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="3" parent="GameBoard/Pillars/3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.68364, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="4" parent="GameBoard/Pillars/3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.52579, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="5" parent="GameBoard/Pillars/3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.36688, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="6" parent="GameBoard/Pillars/3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.20944, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="7" parent="GameBoard/Pillars/3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0505, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="8" parent="GameBoard/Pillars/3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8927, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="9" parent="GameBoard/Pillars/3" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7338, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="4" type="Spatial" parent="GameBoard/Pillars"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.53197 )

[node name="1" parent="GameBoard/Pillars/4" instance=ExtResource( 12 )]

[node name="2" parent="GameBoard/Pillars/4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.84255, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="3" parent="GameBoard/Pillars/4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.68364, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="4" parent="GameBoard/Pillars/4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.52579, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="5" parent="GameBoard/Pillars/4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.36688, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="6" parent="GameBoard/Pillars/4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.20944, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="7" parent="GameBoard/Pillars/4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0505, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="8" parent="GameBoard/Pillars/4" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8927, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="9" parent="GameBoard/Pillars/4" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7338, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="5" type="Spatial" parent="GameBoard/Pillars"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.33197 )

[node name="1" parent="GameBoard/Pillars/5" instance=ExtResource( 12 )]

[node name="2" parent="GameBoard/Pillars/5" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.84255, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="3" parent="GameBoard/Pillars/5" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.68364, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="4" parent="GameBoard/Pillars/5" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.52579, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="5" parent="GameBoard/Pillars/5" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.36688, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="6" parent="GameBoard/Pillars/5" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.20944, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="7" parent="GameBoard/Pillars/5" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0505, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="8" parent="GameBoard/Pillars/5" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8927, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="9" parent="GameBoard/Pillars/5" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7338, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="DeckCreator/MenuSelectDeck/Buttons/MainMenu" to="DeckCreator" method="_on_MainMenu_pressed"]
[connection signal="pressed" from="DeckCreator/MenuSelectDeck/Buttons/PalmDeck" to="DeckCreator" method="_on_PalmDeck_pressed"]
[connection signal="pressed" from="DeckCreator/MenuSelectDeck/Buttons/CrabDeck" to="DeckCreator" method="_on_CrabDeck_pressed"]
[connection signal="pressed" from="DeckCreator/MenuSelectDeck/Buttons/ClearDeck" to="DeckCreator" method="_on_ClearDeck_pressed"]
[connection signal="pressed" from="DeckCreator/MenuSelectDeck/Buttons/BaseDeck" to="DeckCreator" method="_on_BaseDeck_pressed"]
[connection signal="pressed" from="DeckCreator/CardsInClan/BackToMenuButton" to="DeckCreator" method="_on_BackToMenuButton_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/CreateDeckButton" to="MainMenu" method="_on_CreateDeckButton_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/PlayGameButton" to="MainMenu" method="_on_PlayGameButton_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/QuitGameButton" to="MainMenu" method="_on_QuitGameButton_pressed"]
[connection signal="pressed" from="StartHand/ReadyButton" to="StartHand" method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="GameUI/PassTurnButton" to="GameUI" method="_on_PassTurnButton_pressed"]
